Update 1 - Copia.html

--- a/index_arquivos/RECEITAS/1 - Copia.html
+++ b/index_arquivos/RECEITAS/1 - Copia.html
@@ -50,12 +50,16 @@ img {
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/C5VF7NA98pU
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/C5VF7NA98pU/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+Nunca comi ovos tão deliciosos<BR/> Café da manhã simples e fácil! Receita rápida
+<BR/><a href="
+Nunca comi ovos tão deliciosos! Café da manhã simples e fácil! Receita rápida.txt
+" target="_blank">
+IGREDIENTES
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -63,7 +67,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -71,7 +79,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -79,7 +91,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -87,7 +103,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -95,7 +115,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -103,7 +127,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -111,7 +139,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -119,7 +151,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -127,7 +163,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -135,7 +175,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -143,7 +187,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -151,7 +199,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -159,7 +211,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -167,7 +223,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -175,7 +235,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -183,7 +247,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -191,7 +259,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -199,7 +271,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -207,7 +283,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -215,7 +295,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -223,7 +307,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -231,7 +319,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -239,7 +331,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -247,7 +343,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -255,7 +355,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -263,7 +367,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -271,7 +379,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -279,7 +391,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -287,7 +403,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -295,7 +415,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -303,7 +427,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -311,7 +439,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -319,7 +451,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -327,7 +463,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -335,7 +475,11 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+LINK⚫
+.txt" target="_blank">
+NOME⚫
+</a></button>
 
 
 
