Update 1 - Copia (2).html

--- a/index_arquivos/RECEITAS/1 - Copia (2).html
+++ b/index_arquivos/RECEITAS/1 - Copia (2).html
@@ -56,10 +56,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -68,10 +66,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -80,10 +76,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -92,10 +86,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -104,10 +96,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -116,10 +106,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -128,10 +116,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -140,10 +126,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -152,10 +136,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -164,10 +146,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -176,10 +156,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -188,10 +166,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -200,10 +176,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -212,10 +186,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -224,10 +196,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -236,10 +206,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -248,10 +216,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -260,10 +226,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -272,10 +236,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -284,10 +246,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -296,10 +256,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -308,10 +266,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -320,10 +276,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -332,10 +286,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -344,10 +296,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -356,10 +306,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -368,10 +316,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -380,10 +326,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -392,10 +336,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -404,10 +346,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -416,10 +356,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -428,10 +366,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -440,10 +376,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -452,10 +386,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -464,10 +396,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -476,10 +406,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 
 
 
