--- a/index_arquivos/RECEITAS/1 - Copia.html
+++ b/index_arquivos/RECEITAS/1 - Copia.html
@@ -62,15 +62,15 @@ IGREDIENTES
 </a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/eynpvi_2HnM
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/eynpvi_2HnM/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+Como Fazer Crepioca recheada em até 5 minutos
 <BR/><a href="
-LINK⚫
+Como Fazer Crepioca recheada em até 5 minutos
 .txt" target="_blank">
-NOME⚫
+INGREDIENTES
 </a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -80,10 +80,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -92,10 +90,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -104,10 +100,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -116,10 +110,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -128,10 +120,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -140,10 +130,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -152,10 +140,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -164,10 +150,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -176,10 +160,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -188,10 +170,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -200,10 +180,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -212,10 +190,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -224,10 +200,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -236,10 +210,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -248,10 +220,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -260,10 +230,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -272,10 +240,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -284,10 +250,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -296,10 +260,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -308,10 +270,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -320,10 +280,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -332,10 +290,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -344,10 +300,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -356,10 +310,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -368,10 +320,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -380,10 +330,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -392,10 +340,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -404,10 +350,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -416,10 +360,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -428,10 +370,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -440,10 +380,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -452,10 +390,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -464,10 +400,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -476,10 +410,8 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/><a href="
-LINK⚫
-.txt" target="_blank">
 NOME⚫
-</a></button>
+.txt" target="_blank">INGREDIENTES</a></button>
 
 
 
