Update 1 - Copia.html

--- a/index_arquivos/RECEITAS/1 - Copia.html
+++ b/index_arquivos/RECEITAS/1 - Copia.html
@@ -74,13 +74,13 @@ INGREDIENTES
 </a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/vAP3irqFVKw
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/vAP3irqFVKw/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+PIZZA DE TAPIOCA - SUPER RÁPIDA E FÁCIL - SAUDÁVEL E DELICIOSA - TEXTURA INCRÍVEL - Isamara Amâncio
 <BR/><a href="
-NOME⚫
+PIZZA DE TAPIOCA - SUPER RÁPIDA E FÁCIL - SAUDÁVEL E DELICIOSA - TEXTURA INCRÍVEL - Isamara Amâncio
 .txt" target="_blank">INGREDIENTES</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
