Update 1 - Copia.html

--- a/index_arquivos/MÚSICAS/1 - Copia.html
+++ b/index_arquivos/MÚSICAS/1 - Copia.html
@@ -57,9 +57,17 @@ Coletâneas do google drive (fs16).
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
+https://drive.google.com/drive/folders/1cIV30KypObp8_9bw6O8jdDO_iyhvgTgk?usp=sharing
+?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+Google-Drive-Logo.png
+" width="280" height="280"></a><BR/>
+Músicas normais do google drive (s0398).
+<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
 LINK⚫
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+IMAGEM⚫.png
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
@@ -67,15 +75,7 @@ NOME⚫
 <button><a href="
 LINK⚫
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+IMAGEM⚫.png
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
