Update 1 - Copia.html

--- a/index_arquivos/RECEITAS/1 - Copia.html
+++ b/index_arquivos/RECEITAS/1 - Copia.html
@@ -78,7 +78,7 @@ https://www.youtube-nocookie.com/embed/vAP3irqFVKw
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
 https://i.ytimg.com/vi/vAP3irqFVKw/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-PIZZA DE TAPIOCA - SUPER RÁPIDA E FÁCIL - SAUDÁVEL E DELICIOSA - TEXTURA INCRÍVEL - Isamara Amâncio
+PIZZA DE TAPIOCA - SUPER RÁPIDA E FÁCIL <BR/> SAUDÁVEL E DELICIOSA - TEXTURA INCRÍVEL - Isamara Amâncio
 <BR/><a href="
 PIZZA DE TAPIOCA - SUPER RÁPIDA E FÁCIL - SAUDÁVEL E DELICIOSA - TEXTURA INCRÍVEL - Isamara Amâncio
 .txt" target="_blank">INGREDIENTES</a></button>
