Update 1 - Copia.html

--- a/index_arquivos/QR CODE/1 - Copia.html
+++ b/index_arquivos/QR CODE/1 - Copia.html
@@ -136,194 +136,194 @@ BUSCA POR MUSICAS OU CANTOR
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
+NOME⚫
+.png" target="_blank"><img src="
+NOME⚫
+.png" width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 
