--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@ document.write('  '+todaysDate);
     window.setInterval("Horario()",1000);
 //-->
 </SCRIPT></body></html></mark></u><HR/>
-<!--------------------------------------------------------------->
-<!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
@@ -123,6 +121,71 @@ document.write('  '+todaysDate);
 <a href="index.html" target="_self">
 <div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a>
 <!----------------------------------------------------------->
+<!--------------------------------------------------------------->
+<BR/><button><a href="NOSSO SITE.png" target="_blank"><img src="
+NOSSO SITE.png
+" width="280" height="280"></a><BR/>
+NOSSO SITE
+<BR/></button><BR/>
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<HR/>
+<!---------------------------------------------------------------------------------->
+<!DOCTYPE html>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w3-container">
+
+<h2>Closing Alerts</h2>
+<p>To close the alerts, click on the X in the upper right corner:</p>
+<p><a href="
+AVISO.html
+" target="_blank">
+<div class="w3-panel w3-red w3-display-container">
+<span onclick="this.parentElement.style.display='none'"
+  class="w3-button w3-large w3-display-topright">&times;</span>
+<h3>CLIQUE AQUI PARA TODOS OS AVISOS</h3></div>
+</a>.</p>
+
+<!--------------------------------------
+<div class="w3-panel w3-yellow w3-display-container">
+  <span onclick="this.parentElement.style.display='none'"
+  class="w3-button w3-large w3-display-topright">&times;</span>
+  <h3>Warning!</h3>
+  <p>Yellow often indicates a warning that might need attention.</p>
+</div>
+
+<div class="w3-panel w3-green w3-display-container">
+  <span onclick="this.parentElement.style.display='none'"
+  class="w3-button w3-large w3-display-topright">&times;</span>
+  <h3>Success!</h3>
+  <p>Green often indicates something successful or positive.</p>
+</div>
+
+<div class="w3-panel w3-blue w3-display-container">
+  <span onclick="this.parentElement.style.display='none'"
+  class="w3-button w3-large w3-display-topright">&times;</span>
+  <h3>Info!</h3>
+  <p>Blue often indicates a neutral informative change or action.</p>
+</div>
+----------------------------------------->
+</div>
+</body>
+</html>
+
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<HR/>
 <!---------------------------------------------------------------------------------->
 <button><a href="index_arquivos/
 XVÍDEOS
