--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ NOSSO SITE
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <HR/>
-<!---------------------------------------------------------------------------------->
+<!-------------------------------------AVISOS--------------------------------------->
 <!DOCTYPE html>
 <html>
 <title>W3.CSS</title>
@@ -139,8 +139,8 @@ NOSSO SITE
 <body>
 <div class="w3-container">
 
-<h2>Closing Alerts</h2>
-<p>To close the alerts, click on the X in the upper right corner:</p>
+<p>ATUALIZADO EM: 16:07 26/10/2023</p>
+<!---------------------------------------------------------------------------------->
 <p><a href="
 AVISO.html
 " target="_blank">
@@ -149,7 +149,7 @@ AVISO.html
   class="w3-button w3-large w3-display-topright">&times;</span>
 <h3>CLIQUE AQUI PARA TODOS OS AVISOS</h3></div>
 </a>.</p>
-
+<!---------------------------------------------------------------------------------->
 <!--------------------------------------
 <div class="w3-panel w3-yellow w3-display-container">
   <span onclick="this.parentElement.style.display='none'"
@@ -512,7 +512,7 @@ function topFunction() {
 <!----------------------------------------------------------->
 <!DOCTYPE html><html><head><style>
 h3 {
-  color: #0B610B;
+  color: #f6ff00;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style></head><body></body></html>
