Update 1 - Copia.html

--- a/index_arquivos/XVÍDEOS/1 - Copia.html
+++ b/index_arquivos/XVÍDEOS/1 - Copia.html
@@ -12,6 +12,14 @@ img {
     max-width: 100%;
 }
 </style><center><body bgcolor="#CCC"> </body>
+<script language=javascript>
+senha = '0398';
+senhadig = prompt("Digite a senha","")
+if (senha != senhadig){
+alert('Acesso negado!');
+top.location.href='erro.htm';
+}
+</script>
 <!--------------------------------
 <font color="#009427">&emsp;
 <!---------------------------------------------------------------------------------->
