--- a/index_arquivos/FOTOPORNO/1 - Copia.html
+++ b/index_arquivos/FOTOPORNO/1 - Copia.html
@@ -66,50 +66,50 @@ document.getElementById('piscando').style.opacity = '0';
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=690868
-" target="_blank"><img src="
-http://cdn.mypornpics.com/ef/1/ef12bca7a_src.jpg
+" target="_blank"><img src="IMAGENS/
+ef12bca7a_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=992925
 " target="_blank"><img src="
-http://cdn.mypornpics.com/92/a/92a44ccf8_src.jpg
+92a44ccf8_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=445314
 " target="_blank"><img src="
-http://cdn.mypornpics.com/b8/d/b8dc9ba47_src.jpg
+b8dc9ba47_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=602653
 " target="_blank"><img src="
-http://cdn.mypornpics.com/14/c/14cf5479b_src.jpg
+14cf5479b_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=625892
 " target="_blank"><img src="
-http://cdn.mypornpics.com/f1/9/f194f160e_src.jpg
+f194f160e_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=668751
 " target="_blank"><img src="
-http://cdn.mypornpics.com/08/0/080404887_src.jpg
+080404887_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=782036
 " target="_blank"><img src="
-http://cdn.mypornpics.com/57/e/57ec20b1f_src.jpg
+57ec20b1f_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 http://www.mypornpics.com/x/?t=1140994
 " target="_blank"><img src="
-http://cdn.mypornpics.com/08/8/088b860c3_src.jpg
+088b860c3_src.jpg
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
